fix: fixed a bug that shifted the main block when quickly moving the cursor across tabs (06.03.2024 22:09)

--- a/css/style.scss
+++ b/css/style.scss
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
     display: flex;
     flex-direction: column;
     // gap: 4rem 0;
-    padding: 1rem 0.1rem 0.1rem 0.1rem;
+    padding: 0.5rem 0.1rem 0.1rem 0.1rem;
     border-radius: 0.5rem;
     overflow: hidden;
   }
@@ -103,15 +103,14 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
     gap: 0 1rem;
 
     .nav-link {
+      position: relative;
+      bottom: -0.5rem;
       display: flex;
       justify-content: center;
       align-items: center;
-      // padding: 1rem 2rem;
       width: 100px;
-      min-height: 4rem;
-      height: auto;
+      min-height: 4.5rem;
       background: #e6e6e6;
-      border-bottom: 1px solid #46464638;
       border-radius: 0.5rem 0.5rem 0 0;
       color: #4d4d4d;
       font-weight: 500;
@@ -122,19 +121,19 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
     }
 
     .nav-link:hover {
-      margin-top: -0.5rem;
+      bottom: 0;
       color: #000000;
     }
 
     .nav-link:active {
-      margin-top: 0;
+      bottom: -0.5rem;
       background: #f0f0f0;
       box-shadow: inset 0px 0px 0px rgba(0, 0, 0, 0.219), 
       inset -1px -1px 3px 1px rgb(240, 240, 240);
     }
 
     .nav-link--active {
-      margin-top: -0.5rem;
+      bottom: 0;
       color: #000000;
       background: #F6F6F6;
       border-bottom: none;
